--- a/emplacements_photos.qmd
+++ b/emplacements_photos.qmd
@@ -33,7 +33,7 @@
     </spatialrefsys>
   </crs>
   <extent>
-    <spatial miny="0" minz="0" maxy="0" dimensions="2" maxx="0" crs="EPSG:4326" maxz="0" minx="0"/>
+    <spatial minz="0" miny="0" crs="EPSG:4326" minx="0" maxy="0" dimensions="2" maxz="0" maxx="0"/>
     <temporal>
       <period>
         <start></start>
