--- a/points_visite_orelsan.qmd
+++ b/points_visite_orelsan.qmd
@@ -33,7 +33,7 @@
     </spatialrefsys>
   </crs>
   <extent>
-    <spatial miny="0" maxx="0" dimensions="2" maxz="0" minz="0" crs="EPSG:4326" minx="0" maxy="0"/>
+    <spatial maxx="0" crs="EPSG:4326" maxz="0" minx="0" minz="0" dimensions="2" miny="0" maxy="0"/>
     <temporal>
       <period>
         <start></start>
